force-app/main/default/objects/ServiceRequest__c/ServiceRequest__c.object-meta.xml
<CustomObject>
    <label>Service Request</label>
    <nameField>
        <label>Service Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>