force-app/main/default/objects/ServiceRequest__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>STAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>