force-app/main/default/objects/ServiceRequest__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>Practitioner__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>