force-app/main/default/objects/ServiceRequest__c/fields/Service_Code_System__c.field-meta.xml
<CustomField>
    <fullName>Service_Code_System__c</fullName>
    <description>Typical code systems for service requests are CPT and LOINC. Global value set defaults are package-wide, so they are not marked default on LogicEMR_Code_System.</description>
    <label>Service Code System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LogicEMR_Code_System</valueSetName>
    </valueSet>
</CustomField>