force-app/main/default/objects/ServiceRequest__c/fields/Service_Display__c.field-meta.xml
<CustomField>
    <fullName>Service_Display__c</fullName>
    <label>Service Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>