force-app/main/default/objects/ServiceRequest__c/fields/Service_Ref__c.field-meta.xml
<CustomField>
    <fullName>Service_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Canonical Code Reference. Service_Display__c and Service_Code__c remain snapshot fields populated at selection.</description>
    <label>Service</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>