force-app/main/default/objects/ServiceRequest__c/listViews/Active_Orders.listView-meta.xml
<ListView>
    <fullName>Active_Orders</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Service_Display__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Requester__c</columns>
    <columns>Authored_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Orders</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>