force-app/main/default/objects/ServiceRequest__c/listViews/All_Orders.listView-meta.xml
<ListView>
    <fullName>All_Orders</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Service_Display__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Requester__c</columns>
    <columns>Authored_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>